website/versioned_docs/version-0.5/schema-reference.mdx
---
title: Schema Reference
description: Complete OTel schema reference for ROSQL — table definitions, field mappings, span attributes, and profiles
sidebar_position: 7
keywords: [rosql, schema, opentelemetry, otel, ros2, tables, postgresql, clickhouse, parquet, ddl, span attributes]
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# Schema Reference

ROSQL expects telemetry data in the OpenTelemetry schema conventions for ROS2. This document defines the complete schema: table definitions, span attributes, field mappings, and schema profiles.

If you're building a ROS2-to-OTel bridge or setting up your own telemetry storage, implement these conventions to get full ROSQL feature support.

The **table names** are the same across all backends. What differs is the physical layout — column naming conventions for SQL databases, or directory structure for the Parquet backend.

---

## Span attributes

Span attributes are key-value pairs stored in the `span_attributes` column of `otel_traces`. They carry ROS2-specific context — which node ran, which action was executing, which topic was published — and are what ROSQL's field names like `action_name`, `topic`, and `node` resolve to at query time. Getting these right is what makes distributed tracing across a ROS2 system actually queryable.

### ROS2 action executions

| Attribute | Type | Example | Used by ROSQL for |
|-----------|------|---------|-------------------|
| `ros.node` | string | `/bt_navigator` | `WHERE node = '...'` |
| `ros.action.name` | string | `/navigate_to_pose` | `WHERE action_name = '...'` |
| `ros.action.type` | string | `nav2_msgs/action/NavigateToPose` | Action type filtering |
| `ros.action.goal_id` | string | UUID | Goal correlation |
| `ros.action.status` | string | `succeeded` / `aborted` / `canceled` | Action status filtering |

### ROS2 pub/sub tracing

| Attribute | Type | Example | Used by ROSQL for |
|-----------|------|---------|-------------------|
| `ros.topic` | string | `/cmd_vel` | Topic filtering, `MESSAGE FLOW` |
| `ros.message_type` | string | `geometry_msgs/msg/Twist` | Message type filtering |
| `ros.publisher_node` | string | `/controller_server` | Publisher attribution |
| `ros.subscriber_node` | string | `/motor_driver` | Subscriber attribution |
| `ros.session.id` | string | `sess_abc123` | `FOR SESSION` scoping |

### Universal scope resource attributes

These resource attributes are set at the SDK/bridge level and enable `FOR` clause scoping across all query types.

| Attribute | Type | Example | Used by ROSQL for |
|-----------|------|---------|-------------------|
| `robot.id` | string | `robot_42` | `FOR ROBOT` scoping |
| `service.version` | string | `v1.2.3` | `FOR VERSION` scoping |
| `deployment.environment` | string | `production` | `FOR ENVIRONMENT` scoping |
| `ros.session.id` | string | `sess_abc123` | `FOR SESSION` scoping |

### ParentSpanId convention for `TRACE`

The publish span's `SpanId` must be set as the `ParentSpanId` of the corresponding subscribe span. This creates the causal chain that `TRACE` traverses recursively via a CTE.

```
Publisher span (SpanId: "abc")
  └── Subscriber span (ParentSpanId: "abc", SpanId: "def")
        └── Downstream span (ParentSpanId: "def", SpanId: "ghi")
```

Implementing this correctly requires middleware-level instrumentation — it cannot be done purely at the application level without code changes to every node.

---

## Metric naming conventions

| Metric name | Unit | Description |
|-------------|------|-------------|
| `ros2.topic.message_rate` | Hz | Topic publish rate |
| `ros2.topic.bandwidth` | B/s | Topic bandwidth |
| `ros2.topic.messages_received` | — | Messages received by subscribers |
| `ros2.topic.messages_captured` | — | Messages captured (e.g. by recorder) |
| `ros2.topic.messages_filtered` | — | Messages filtered/dropped |
| `ros2.action_servers.count` | — | Active action server count |
| `ros2.services.count` | — | Active service count |
| `ros2.action.queued_goals` | — | Queued action goals |
| `ros2.action.active_goals` | — | Active action goals |
| `ros2.action.completion_rate` | Hz | Action completion rate |
| `system.cpu.utilization` | % | Total CPU utilization |
| `system.memory.utilization` | % | Memory utilization |
| `system.memory.usage` | B | Memory usage in bytes |
| `system.filesystem.utilization` | % | Disk utilization |
| `system.filesystem.usage` | B | Disk usage in bytes |
| `system.disk.io` | B/s | Disk I/O throughput |
| `system.disk.operations` | ops/s | Disk IOPS |
| `system.network.io` | B/s | Network I/O throughput |
| `system.network.packets` | packets/s | Network packet rate |
| `system.network.latency` | ms | Network latency |
| `system.network.jitter` | ms | Network jitter |
| `system.network.packet_loss` | % | Packet loss rate |
| `system.temperature` | °C | System temperature |
| `system.battery.charge` | % | Battery state of charge |
| `system.battery.voltage` | V | Battery voltage |
| `system.battery.current` | A | Battery current draw |
| `system.battery.temperature` | °C | Battery temperature |
| `process.cpu.utilization` | % | Per-process CPU utilization |
| `process.memory.usage` | B | Per-process memory usage |

---

## Required tables

These three tables are required for basic ROSQL functionality.

### `otel_traces`

Used by: `FROM traces`, `TRACE`, `MESSAGE FLOW`, `DURING()`, `ACTION_SUCCESS_RATE`, `MOVING_AVG`, `DERIVATIVE`, `SHOW DEPLOYMENTS`, `SHOW SPAN SUMMARY`, `SHOW PLANS`

<Tabs>
  <TabItem value="postgres" label="PostgreSQL" default>

```sql
CREATE TABLE otel_traces (
    timestamp            TIMESTAMPTZ NOT NULL,
    trace_id             TEXT NOT NULL,
    span_id              TEXT NOT NULL,
    parent_span_id       TEXT NOT NULL DEFAULT '',
    span_name        TEXT NOT NULL,
    span_kind            TEXT NOT NULL DEFAULT 'INTERNAL',
    service_name         TEXT NOT NULL DEFAULT '',
    duration             BIGINT NOT NULL,          -- nanoseconds
    status_code          TEXT NOT NULL DEFAULT 'OK',
    span_attributes      JSONB NOT NULL DEFAULT '{}',
    resource_attributes  JSONB NOT NULL DEFAULT '{}'
);
```

Use `--schema otel-postgres` (default for PostgreSQL and MySQL).

  </TabItem>
  <TabItem value="clickhouse" label="ClickHouse">

```sql
CREATE TABLE otel_traces (
    Timestamp            DateTime64(9) NOT NULL,
    TraceId              String NOT NULL,
    SpanId               String NOT NULL,
    ParentSpanId         String NOT NULL DEFAULT '',
    SpanName             String NOT NULL,
    SpanKind             String NOT NULL DEFAULT 'INTERNAL',
    ServiceName          String NOT NULL DEFAULT '',
    Duration             Int64 NOT NULL,           -- nanoseconds
    StatusCode           String NOT NULL DEFAULT 'OK',
    SpanAttributes       Map(String, String) NOT NULL,
    ResourceAttributes   Map(String, String) NOT NULL
) ENGINE = MergeTree()
ORDER BY (Timestamp, TraceId, SpanId);
```

Use `--schema otel-clickhouse`.

  </TabItem>
  <TabItem value="parquet" label="Parquet">

Create a `traces/` subdirectory under your base URL. ROSQL creates a DuckDB view over `traces/**/*.parquet`.

```
<url>/
  traces/
    *.parquet    ← or any nested structure, e.g. date=2026-04-11/*.parquet
```

Required Parquet columns (snake_case, matching the `otel-postgres` profile):

| Column | Parquet type |
|--------|-------------|
| `timestamp` | TIMESTAMP (UTC) |
| `trace_id` | STRING |
| `span_id` | STRING |
| `parent_span_id` | STRING |
| `span_name` | STRING |
| `span_kind` | STRING |
| `service_name` | STRING |
| `duration` | INT64 (nanoseconds) |
| `status_code` | STRING |
| `span_attributes` | STRING (JSON) |
| `resource_attributes` | STRING (JSON) |

If the `traces/` subdirectory is absent or contains no `.parquet` files, ROSQL silently skips the view and reports `FROM traces` as unavailable.

  </TabItem>
</Tabs>

### `otel_logs`

Used by: `FROM logs`

<Tabs>
  <TabItem value="postgres" label="PostgreSQL" default>

```sql
CREATE TABLE otel_logs (
    timestamp            TIMESTAMPTZ NOT NULL,
    trace_id             TEXT NOT NULL DEFAULT '',
    span_id              TEXT NOT NULL DEFAULT '',
    severity_text        TEXT NOT NULL DEFAULT 'INFO',
    severity_number      INTEGER NOT NULL DEFAULT 9,
    service_name         TEXT NOT NULL DEFAULT '',
    body                 TEXT NOT NULL DEFAULT '',
    resource_attributes  JSONB NOT NULL DEFAULT '{}',
    log_attributes       JSONB NOT NULL DEFAULT '{}'
);
```

  </TabItem>
  <TabItem value="clickhouse" label="ClickHouse">

```sql
CREATE TABLE otel_logs (
    Timestamp            DateTime64(9) NOT NULL,
    TraceId              String NOT NULL DEFAULT '',
    SpanId               String NOT NULL DEFAULT '',
    SeverityText         String NOT NULL DEFAULT 'INFO',
    SeverityNumber       UInt8 NOT NULL DEFAULT 9,
    ServiceName          String NOT NULL DEFAULT '',
    Body                 String NOT NULL DEFAULT '',
    ResourceAttributes   Map(String, String) NOT NULL,
    LogAttributes        Map(String, String) NOT NULL
) ENGINE = MergeTree()
ORDER BY Timestamp;
```

  </TabItem>
  <TabItem value="parquet" label="Parquet">

Subdirectory: `logs/`. ROSQL creates a view over `logs/**/*.parquet`.

| Column | Parquet type |
|--------|-------------|
| `timestamp` | TIMESTAMP (UTC) |
| `trace_id` | STRING |
| `span_id` | STRING |
| `severity_text` | STRING |
| `severity_number` | INT32 |
| `service_name` | STRING |
| `body` | STRING |
| `resource_attributes` | STRING (JSON) |
| `log_attributes` | STRING (JSON) |

  </TabItem>
</Tabs>

### `otel_metrics`

Used by: `FROM metrics`, `TOPIC_RATE`

<Tabs>
  <TabItem value="postgres" label="PostgreSQL" default>

```sql
CREATE TABLE otel_metrics (
    timestamp            TIMESTAMPTZ NOT NULL,
    metric_name          TEXT NOT NULL,
    value                DOUBLE PRECISION NOT NULL,
    attributes           JSONB NOT NULL DEFAULT '{}',
    service_name         TEXT NOT NULL DEFAULT ''
);
```

  </TabItem>
  <TabItem value="clickhouse" label="ClickHouse">

```sql
CREATE TABLE otel_metrics (
    Timestamp            DateTime64(9) NOT NULL,
    MetricName           String NOT NULL,
    Value                Float64 NOT NULL,
    Attributes           Map(String, String) NOT NULL,
    ServiceName          String NOT NULL DEFAULT ''
) ENGINE = MergeTree()
ORDER BY (Timestamp, MetricName);
```

  </TabItem>
  <TabItem value="parquet" label="Parquet">

Subdirectory: `metrics/`. ROSQL creates a view over `metrics/**/*.parquet`.

| Column | Parquet type |
|--------|-------------|
| `timestamp` | TIMESTAMP (UTC) |
| `metric_name` | STRING |
| `value` | DOUBLE |
| `attributes` | STRING (JSON) |
| `service_name` | STRING |

  </TabItem>
</Tabs>

---

## Optional tables

These tables enable additional ROSQL features. If absent, ROSQL returns a clear `DataSourceUnavailable` error with guidance.

### `topic_messages`

Used by: `FROM topics`, `FROM odom` (and other topic aliases)

<Tabs>
  <TabItem value="postgres" label="PostgreSQL" default>

```sql
CREATE TABLE topic_messages (
    robot_id             TEXT NOT NULL,
    topic_name           TEXT NOT NULL,
    timestamp            TIMESTAMPTZ NOT NULL,
    fields               JSONB NOT NULL DEFAULT '{}',
    message_type         TEXT NOT NULL DEFAULT ''
);
```

  </TabItem>
  <TabItem value="clickhouse" label="ClickHouse">

```sql
CREATE TABLE topic_messages (
    robot_id             String NOT NULL,
    topic_name           String NOT NULL,
    Timestamp            DateTime64(9) NOT NULL,
    fields               String NOT NULL DEFAULT '{}',
    message_type         String NOT NULL DEFAULT ''
) ENGINE = MergeTree()
ORDER BY (Timestamp, topic_name, robot_id);
```

  </TabItem>
  <TabItem value="parquet" label="Parquet">

Subdirectory: `topic_messages/`. ROSQL creates a view over `topic_messages/**/*.parquet`.

| Column | Parquet type |
|--------|-------------|
| `robot_id` | STRING |
| `topic_name` | STRING |
| `timestamp` | TIMESTAMP (UTC) |
| `fields` | STRING (JSON) |
| `message_type` | STRING |

  </TabItem>
</Tabs>

### `mcap_metadata`

Used by: `FROM recordings`, `FROM recordings WHERE topic = '...'`

<Tabs>
  <TabItem value="postgres" label="PostgreSQL" default>

```sql
CREATE TABLE mcap_metadata (
    robot_id             TEXT NOT NULL,
    session_id           TEXT NOT NULL,
    start_time           TIMESTAMPTZ NOT NULL,
    end_time             TIMESTAMPTZ NOT NULL,
    file_uri             TEXT NOT NULL,
    topics               TEXT[] NOT NULL DEFAULT '{}',
    message_types        JSONB NOT NULL DEFAULT '{}'  -- topic → message_type map
);
```

  </TabItem>
  <TabItem value="clickhouse" label="ClickHouse">

```sql
CREATE TABLE mcap_metadata (
    robot_id             String NOT NULL,
    session_id           String NOT NULL,
    start_time           DateTime64(9) NOT NULL,
    end_time             DateTime64(9) NOT NULL,
    file_uri             String NOT NULL,
    topics               Array(String) NOT NULL DEFAULT [],
    message_types        String NOT NULL DEFAULT '{}'  -- topic → message_type JSON
) ENGINE = MergeTree()
ORDER BY (start_time, robot_id);
```

  </TabItem>
  <TabItem value="parquet" label="Parquet">

Subdirectory: `mcap_metadata/`. ROSQL creates a view over `mcap_metadata/**/*.parquet`.

| Column | Parquet type |
|--------|-------------|
| `robot_id` | STRING |
| `session_id` | STRING |
| `start_time` | TIMESTAMP (UTC) |
| `end_time` | TIMESTAMP (UTC) |
| `file_uri` | STRING |
| `topics` | LIST\<STRING\> |
| `message_types` | STRING (JSON) |

`file_uri` is a full URI pointing to the MCAP file. Supports `s3://`, `file://`, and `gs://` schemes.

  </TabItem>
</Tabs>

### `robot_joint_map`

Stores URDF-derived joint metadata per robot model. Required for `SHOW JOINTS`.

<Tabs>
  <TabItem value="postgres" label="PostgreSQL" default>

```sql
CREATE TABLE robot_joint_map (
    robot_model          TEXT NOT NULL,
    valid_from           TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    valid_to             TIMESTAMPTZ,                          -- NULL = currently active
    version              TEXT NOT NULL DEFAULT '',
    robot_ids            TEXT[] NOT NULL DEFAULT '{}',         -- robots using this model
    joint_map            JSONB NOT NULL DEFAULT '[]'           -- array of joint descriptors
);
```

  </TabItem>
  <TabItem value="duckdb" label="DuckDB / Parquet">

Provide as a Parquet file registered under the name `robot_joint_map`. A sample fixture is included at [`examples/parquet/fixtures/robot_joint_map/robot_joint_map.parquet`](https://github.com/RobotOpsInc/rosql/tree/main/examples/parquet/fixtures/robot_joint_map).

```sql
-- DuckDB schema (used by generate_fixtures.sh)
CREATE TABLE robot_joint_map (
    robot_model  TEXT NOT NULL,
    valid_from   TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    valid_to     TIMESTAMPTZ,
    version      TEXT NOT NULL DEFAULT '',
    robot_ids    VARCHAR[] NOT NULL DEFAULT [],
    joint_map    JSON NOT NULL DEFAULT '[]'
);
```

  </TabItem>
  <TabItem value="clickhouse" label="ClickHouse">

```sql
CREATE TABLE robot_joint_map (
    robot_model          String NOT NULL,
    valid_from           DateTime64(9) NOT NULL,
    valid_to             Nullable(DateTime64(9)),
    version              String NOT NULL DEFAULT '',
    robot_ids            Array(String) NOT NULL DEFAULT [],
    joint_map            String NOT NULL DEFAULT '[]'          -- JSON array of joint descriptors
) ENGINE = ReplacingMergeTree(valid_from)
ORDER BY (robot_model, valid_from);
```

  </TabItem>
</Tabs>

`joint_map` element schema:
```json
{
  "joint_name": "shoulder_pan_joint",
  "joint_index": 0,
  "joint_type": "revolute",
  "lower_limit": -3.14159,
  "upper_limit": 3.14159
}
```

Used by: `SHOW JOINTS`, `JOINT DEVIATION`

---

### Additional tables (optional)

These tables power the additional data sources. If absent, ROSQL returns a `DataSourceUnavailable` error. For DuckDB/Parquet, provide each as a `.parquet` file registered under the table name — the same pattern as `robot_joint_map`.

| ROSQL source | Table | Description |
|---|---|---|
| `FROM tf` | `tf_states` | ROS2 TF2 coordinate frame transforms |
| `FROM heartbeats` | `robot_heartbeats` | Robot liveness and status heartbeats |
| `FROM system_logs` | `system_logs` | OS/kernel-level log events |
| `FROM diagnostics` | `otel_metrics` | ROS2 diagnostic messages (maps to the `otel_metrics` table) |
| `FROM events` | `ros2_events` | ROS2 lifecycle and deployment events |
| `FROM node_graph` | `node_graph_edges` | ROS2 node-graph publisher/subscriber edges |
| `FROM joints` | `joint_states` | ROS2 `/joint_states` per-joint position/velocity/effort |

#### `tf_states`

Stores ROS2 TF2 transform broadcasts — one row per transform stamped message.

```sql
CREATE TABLE tf_states (
    timestamp      TIMESTAMPTZ NOT NULL,
    org_id         TEXT NOT NULL DEFAULT '',
    robot_id       TEXT NOT NULL,
    parent_frame   TEXT NOT NULL,          -- e.g. 'map', 'odom'
    child_frame    TEXT NOT NULL,          -- e.g. 'base_link', 'camera_link'
    translation_x  DOUBLE PRECISION NOT NULL DEFAULT 0,
    translation_y  DOUBLE PRECISION NOT NULL DEFAULT 0,
    translation_z  DOUBLE PRECISION NOT NULL DEFAULT 0,
    rotation_x     DOUBLE PRECISION NOT NULL DEFAULT 0,  -- quaternion x
    rotation_y     DOUBLE PRECISION NOT NULL DEFAULT 0,
    rotation_z     DOUBLE PRECISION NOT NULL DEFAULT 0,
    rotation_w     DOUBLE PRECISION NOT NULL DEFAULT 1
);
```

ROSQL exposes every column as a bare field — query them directly without map access:

```sql
FROM tf
WHERE parent_frame = 'base_link' AND child_frame = 'tool0'
AND translation_z > 1.0
SINCE 1 hour ago
FACET robot_id
```

#### `robot_heartbeats`

Stores periodic liveness signals from each robot. Used by lifecycle anchors (`SINCE last robot restart`).

```sql
CREATE TABLE robot_heartbeats (
    timestamp          TIMESTAMPTZ NOT NULL,
    robot_id           TEXT NOT NULL,
    status             TEXT NOT NULL DEFAULT 'online',  -- 'online' | 'degraded' | 'offline'
    uptime_ns          BIGINT NOT NULL DEFAULT 0,       -- robot uptime in nanoseconds
    battery_percentage DOUBLE PRECISION,
    attributes         JSONB NOT NULL DEFAULT '{}'      -- platform-specific metadata
);
```

#### `system_logs`

Stores OS/kernel-level log events alongside ROS2 data — CPU, memory, network, systemd events.

```sql
CREATE TABLE system_logs (
    timestamp        TIMESTAMPTZ NOT NULL,
    robot_id         TEXT NOT NULL,
    severity_text    TEXT NOT NULL DEFAULT 'INFO',
    severity_number  INTEGER NOT NULL DEFAULT 9,
    host             TEXT NOT NULL DEFAULT '',
    body             TEXT NOT NULL DEFAULT '',
    log_attributes   JSONB NOT NULL DEFAULT '{}'
);
```

#### `ros2_events`

Stores deployment rollouts and ROS2 node lifecycle events. Powers `SHOW DEPLOYMENTS` and deployment-scoped lifecycle anchors.

```sql
CREATE TABLE ros2_events (
    timestamp   TIMESTAMPTZ NOT NULL,
    robot_id    TEXT NOT NULL,
    event_type  TEXT NOT NULL,          -- 'deployment' | 'node_started' | 'node_error' | ...
    node_name   TEXT NOT NULL DEFAULT '',
    version     TEXT NOT NULL DEFAULT '',
    payload     JSONB NOT NULL DEFAULT '{}'
);
```

#### `node_graph_edges`

Stores ROS2 node-graph pub/sub edges — one row per node-to-node connection over a topic. Powers connectivity and QoS-compatibility queries such as finding edges where a `best_effort` publisher feeds a `reliable` subscriber (`compatible = false`).

```sql
CREATE TABLE node_graph_edges (
    timestamp      TIMESTAMPTZ NOT NULL,
    org_id         TEXT NOT NULL DEFAULT '',
    robot_id       TEXT NOT NULL,
    source_node    TEXT NOT NULL,          -- publishing node, e.g. '/lidar_driver'
    target_node    TEXT NOT NULL,          -- subscribing node, e.g. '/costmap_2d'
    topic          TEXT NOT NULL,          -- e.g. '/scan'
    message_type   TEXT NOT NULL DEFAULT '',
    publisher_qos  TEXT NOT NULL DEFAULT '',  -- 'reliable' | 'best_effort'
    subscriber_qos TEXT NOT NULL DEFAULT '',  -- 'reliable' | 'best_effort'
    rate_hz        DOUBLE PRECISION NOT NULL DEFAULT 0,
    compatible     BOOLEAN NOT NULL DEFAULT TRUE   -- false = QoS mismatch
);
```

ROSQL exposes every column as a bare field — query them directly without map access:

```sql
FROM node_graph
WHERE compatible = false
FOR ROBOT 'robot-amr-02'
```

#### `joint_states`

Stores ROS2 `/joint_states` samples — one row per joint per sample. Powers per-joint position/velocity/effort queries such as finding joints under high load (`effort > 10`).

```sql
CREATE TABLE joint_states (
    timestamp   TIMESTAMPTZ NOT NULL,
    org_id      TEXT NOT NULL DEFAULT '',
    robot_id    TEXT NOT NULL,
    joint_name  TEXT NOT NULL,          -- e.g. 'shoulder_lift_joint'
    position    DOUBLE PRECISION NOT NULL DEFAULT 0,  -- radians
    velocity    DOUBLE PRECISION NOT NULL DEFAULT 0,  -- rad/s
    effort      DOUBLE PRECISION NOT NULL DEFAULT 0   -- Nm
);
```

ROSQL exposes every column as a bare field — query them directly without map access:

```sql
FROM joints
WHERE effort > 10
FOR ROBOT 'robot-amr-02'
SINCE 1 hour ago
```

---

## ROSQL field mappings

ROSQL field names are resolved to physical column names based on the active schema profile. Use `--schema otel-postgres` (default) or `--schema otel-clickhouse`.

The Parquet backend uses `otel-postgres` column names.

### From `otel_traces`

<Tabs>
  <TabItem value="otel-postgres" label="otel-postgres" default>

| ROSQL field | Column | Storage unit |
|-------------|--------|-------------|
| `trace_id` | `trace_id` | — |
| `span_id` | `span_id` | — |
| `parent_span_id` | `parent_span_id` | — |
| `span_name` | `span_name` | — |
| `service` | `service_name` | — |
| `duration` | `duration` | nanoseconds |
| `status` | `status_code` | OK / ERROR |
| `node` | `span_attributes->>'ros.node'` | — |
| `action_name` | `span_attributes->>'ros.action.name'` | — |
| `action_status` | `span_attributes->>'ros.action.status'` | — |
| `topic` | `span_attributes->>'ros.topic'` | — |
| `robot_id` | `resource_attributes->>'robot.id'` | — |
| `org_id` | `resource_attributes->>'organization.id'` | — |
| `version` | `resource_attributes->>'service.version'` | — |
| `environment` | `resource_attributes->>'deployment.environment'` | — |
| `session_id` | `resource_attributes->>'ros.session.id'` | — |

  </TabItem>
  <TabItem value="otel-clickhouse" label="otel-clickhouse">

| ROSQL field | Column | Storage unit |
|-------------|--------|-------------|
| `trace_id` | `TraceId` | — |
| `span_id` | `SpanId` | — |
| `parent_span_id` | `ParentSpanId` | — |
| `span_name` | `SpanName` | — |
| `service` | `ServiceName` | — |
| `duration` | `Duration` | nanoseconds |
| `status` | `StatusCode` | OK / ERROR |
| `node` | `SpanAttributes['ros.node']` | — |
| `action_name` | `SpanAttributes['ros.action.name']` | — |
| `action_status` | `SpanAttributes['ros.action.status']` | — |
| `topic` | `SpanAttributes['ros.topic']` | — |
| `robot_id` | `ResourceAttributes['robot.id']` | — |
| `org_id` | `ResourceAttributes['organization.id']` | — |
| `version` | `ResourceAttributes['service.version']` | — |
| `environment` | `ResourceAttributes['deployment.environment']` | — |
| `session_id` | `ResourceAttributes['ros.session.id']` | — |

  </TabItem>
</Tabs>

### From `otel_logs`

<Tabs>
  <TabItem value="otel-postgres" label="otel-postgres" default>

| ROSQL field | Column |
|-------------|--------|
| `message` | `body` |
| `severity` | `severity_text` |
| `severity_number` | `severity_number` |
| `robot_id` | `resource_attributes->>'robot.id'` |
| `org_id` | `resource_attributes->>'organization.id'` |

  </TabItem>
  <TabItem value="otel-clickhouse" label="otel-clickhouse">

| ROSQL field | Column |
|-------------|--------|
| `message` | `Body` |
| `severity` | `SeverityText` |
| `severity_number` | `SeverityNumber` |
| `robot_id` | `ResourceAttributes['robot.id']` |
| `org_id` | `ResourceAttributes['organization.id']` |

  </TabItem>
</Tabs>

### From `otel_metrics`

<Tabs>
  <TabItem value="otel-postgres" label="otel-postgres" default>

| ROSQL field | Resolved as | Storage unit |
|-------------|------------|-------------|
| `metric_name` | `metric_name` | — |
| `metric_value` | `value` | varies |
| `publish_rate` | `value` WHERE `metric_name = 'ros2.topic.message_rate'` | Hz |
| `bandwidth` | `value` WHERE `metric_name = 'ros2.topic.bandwidth'` | B/s |
| `messages_received` | `value` WHERE `metric_name = 'ros2.topic.messages_received'` | — |
| `messages_captured` | `value` WHERE `metric_name = 'ros2.topic.messages_captured'` | — |
| `messages_filtered` | `value` WHERE `metric_name = 'ros2.topic.messages_filtered'` | — |
| `action_servers_count` | `value` WHERE `metric_name = 'ros2.action_servers.count'` | — |
| `services_count` | `value` WHERE `metric_name = 'ros2.services.count'` | — |
| `queued_goals` | `value` WHERE `metric_name = 'ros2.action.queued_goals'` | — |
| `active_goals` | `value` WHERE `metric_name = 'ros2.action.active_goals'` | — |
| `completion_rate` | `value` WHERE `metric_name = 'ros2.action.completion_rate'` | Hz |
| `cpu_usage` | `value` WHERE `metric_name = 'system.cpu.utilization'` | % |
| `memory_usage` | `value` WHERE `metric_name = 'system.memory.utilization'` | % |
| `memory_bytes` | `value` WHERE `metric_name = 'system.memory.usage'` | B |
| `disk_usage` | `value` WHERE `metric_name = 'system.filesystem.utilization'` | % |
| `disk_bytes` | `value` WHERE `metric_name = 'system.filesystem.usage'` | B |
| `disk_io` | `value` WHERE `metric_name = 'system.disk.io'` | B/s |
| `disk_iops` | `value` WHERE `metric_name = 'system.disk.operations'` | ops/s |
| `network_io` | `value` WHERE `metric_name = 'system.network.io'` | B/s |
| `network_packets` | `value` WHERE `metric_name = 'system.network.packets'` | packets/s |
| `network_latency` | `value` WHERE `metric_name = 'system.network.latency'` | ms |
| `network_jitter` | `value` WHERE `metric_name = 'system.network.jitter'` | ms |
| `packet_loss` | `value` WHERE `metric_name = 'system.network.packet_loss'` | % |
| `temperature` | `value` WHERE `metric_name = 'system.temperature'` | °C |
| `battery_charge` | `value` WHERE `metric_name = 'system.battery.charge'` | % |
| `battery_voltage` | `value` WHERE `metric_name = 'system.battery.voltage'` | V |
| `battery_current` | `value` WHERE `metric_name = 'system.battery.current'` | A |
| `battery_temperature` | `value` WHERE `metric_name = 'system.battery.temperature'` | °C |
| `process_cpu` | `value` WHERE `metric_name = 'process.cpu.utilization'` | % |
| `process_memory` | `value` WHERE `metric_name = 'process.memory.usage'` | B |
| `robot_id` | `resource_attributes->>'robot.id'` | — |
| `org_id` | `resource_attributes->>'organization.id'` | — |

  </TabItem>
  <TabItem value="otel-clickhouse" label="otel-clickhouse">

| ROSQL field | Resolved as | Storage unit |
|-------------|------------|-------------|
| `metric_name` | `MetricName` | — |
| `metric_value` | `Value` | varies |
| `publish_rate` | `Value` WHERE `MetricName = 'ros2.topic.message_rate'` | Hz |
| `bandwidth` | `Value` WHERE `MetricName = 'ros2.topic.bandwidth'` | B/s |
| `messages_received` | `Value` WHERE `MetricName = 'ros2.topic.messages_received'` | — |
| `messages_captured` | `Value` WHERE `MetricName = 'ros2.topic.messages_captured'` | — |
| `messages_filtered` | `Value` WHERE `MetricName = 'ros2.topic.messages_filtered'` | — |
| `action_servers_count` | `Value` WHERE `MetricName = 'ros2.action_servers.count'` | — |
| `services_count` | `Value` WHERE `MetricName = 'ros2.services.count'` | — |
| `queued_goals` | `Value` WHERE `MetricName = 'ros2.action.queued_goals'` | — |
| `active_goals` | `Value` WHERE `MetricName = 'ros2.action.active_goals'` | — |
| `completion_rate` | `Value` WHERE `MetricName = 'ros2.action.completion_rate'` | Hz |
| `cpu_usage` | `Value` WHERE `MetricName = 'system.cpu.utilization'` | % |
| `memory_usage` | `Value` WHERE `MetricName = 'system.memory.utilization'` | % |
| `memory_bytes` | `Value` WHERE `MetricName = 'system.memory.usage'` | B |
| `disk_usage` | `Value` WHERE `MetricName = 'system.filesystem.utilization'` | % |
| `disk_bytes` | `Value` WHERE `MetricName = 'system.filesystem.usage'` | B |
| `disk_io` | `Value` WHERE `MetricName = 'system.disk.io'` | B/s |
| `disk_iops` | `Value` WHERE `MetricName = 'system.disk.operations'` | ops/s |
| `network_io` | `Value` WHERE `MetricName = 'system.network.io'` | B/s |
| `network_packets` | `Value` WHERE `MetricName = 'system.network.packets'` | packets/s |
| `network_latency` | `Value` WHERE `MetricName = 'system.network.latency'` | ms |
| `network_jitter` | `Value` WHERE `MetricName = 'system.network.jitter'` | ms |
| `packet_loss` | `Value` WHERE `MetricName = 'system.network.packet_loss'` | % |
| `temperature` | `Value` WHERE `MetricName = 'system.temperature'` | °C |
| `battery_charge` | `Value` WHERE `MetricName = 'system.battery.charge'` | % |
| `battery_voltage` | `Value` WHERE `MetricName = 'system.battery.voltage'` | V |
| `battery_current` | `Value` WHERE `MetricName = 'system.battery.current'` | A |
| `battery_temperature` | `Value` WHERE `MetricName = 'system.battery.temperature'` | °C |
| `process_cpu` | `Value` WHERE `MetricName = 'process.cpu.utilization'` | % |
| `process_memory` | `Value` WHERE `MetricName = 'process.memory.usage'` | B |
| `robot_id` | `ResourceAttributes['robot.id']` | — |
| `org_id` | `ResourceAttributes['organization.id']` | — |

  </TabItem>
</Tabs>

### From `topic_messages` (odom / position data)

ROSQL geospatial operators (`WITHIN`) and `JOINT DEVIATION` extract nested values from the `fields` JSONB column using these conventions:

| ROSQL path | `fields` JSON path | ROS2 type | Description |
|---|---|---|---|
| `position.latitude` | `fields->>'position.latitude'` | `sensor_msgs/NavSatFix` | GPS latitude (degrees) |
| `position.longitude` | `fields->>'position.longitude'` | `sensor_msgs/NavSatFix` | GPS longitude (degrees) |
| `gps.lat` | `fields->>'position.latitude'` | `sensor_msgs/NavSatFix` | GPS latitude alias |
| `gps.lon` | `fields->>'position.longitude'` | `sensor_msgs/NavSatFix` | GPS longitude alias |
| `pose.pose.position.x` | `fields->>'pose.pose.position.x'` | `nav_msgs/Odometry` | Local frame X (metres) |
| `pose.pose.position.y` | `fields->>'pose.pose.position.y'` | `nav_msgs/Odometry` | Local frame Y (metres) |
| `position.x` | `fields->>'pose.pose.position.x'` | `nav_msgs/Odometry` | Local X alias |
| `position.y` | `fields->>'pose.pose.position.y'` | `nav_msgs/Odometry` | Local Y alias |
| `orientation.yaw` | computed from quaternion | `nav_msgs/Odometry` | Yaw angle (radians) |
| `position[N]` | `fields->'position'->>N` | `sensor_msgs/JointState` | Joint position at index N (radians) |
| `velocity[N]` | `fields->'velocity'->>N` | `sensor_msgs/JointState` | Joint velocity at index N (rad/s) |
| `effort[N]` | `fields->'effort'->>N` | `sensor_msgs/JointState` | Joint effort at index N (Nm) |

`orientation.yaw` is derived from the Odometry quaternion via `atan2(2*(qw·qz + qx·qy), 1 − 2*(qy² + qz²))`.

For `JointState` fields, `N` is the zero-based array index. To access joints by name instead of index, use `SHOW JOINTS FOR ROBOT '...'` to inspect the robot's joint map, then use the named index. See [Joint state array indexing](/docs/concepts#joint-state-array-indexing).

---

## Topic aliases

| ROSQL source | Resolves to |
|-------------|------------|
| `FROM odom` | `FROM topics WHERE topic_name = '/odom'` |
| `FROM joint_states` | `FROM topics WHERE topic_name = '/joint_states'` |
| `FROM battery` | `FROM topics WHERE topic_name = '/battery_state'` |
| `FROM cmd_vel` | `FROM topics WHERE topic_name = '/cmd_vel'` |
| `FROM imu` | `FROM topics WHERE topic_name = '/imu/data'` |

---

## Error taxonomy

ROSQL produces structured errors with actionable messages. No raw SQL or database error text is ever surfaced to the user.

| Error type | When raised | What to do |
|---|---|---|
| `ParseError` | Syntax or grammar error in the query | Fix the query syntax. The error includes a `suggestion` field with a "did you mean?" hint. |
| `UnitError` | Invalid unit or incompatible unit comparison | Use a compatible unit (e.g. `500 ms` not `500 kg`). |
| `NotImplemented` | Feature parses correctly but is not yet implemented | Check the docs for the current feature set. A cookbook link is included in the error message. |
| `ReservedSyntax` | A reserved keyword is used (e.g. `ALERT`, `DEFINE`) | These keywords are reserved for the Robot Ops platform, not the open-source ROSQL layer. |
| `DataSourceUnavailable` | A required table is missing from the database | Verify the table exists and telemetry is being ingested. The error names the exact missing table. |
| `MutationRejected` | `INSERT`, `UPDATE`, `DELETE`, or `DROP` attempted | ROSQL is read-only. |
| `CompilationError` | Valid syntax but cannot be compiled (e.g. scope mismatch) | Read the error message — it describes the specific constraint. |
| `ExecutionError` | Database execution failed | The error names the data source and includes an actionable suggestion. Never leaks raw driver text. |

### Warnings (non-fatal)

Some queries compile and execute successfully but include `warnings` alongside the result. Each warning has a `code`, `message`, and `suggestion`:

| Code | Raised when | Suggestion |
|---|---|---|
| `ANOMALY_NO_FACET` | `ANOMALY(...)` is used without `FACET` | Add `FACET robot_id` or `FACET action_name` to compare like-for-like spans |
